<resources>
    <string name="app_name">IntentsProj</string>
    <string name="head">Activity 1</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="btn_ok">OK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="result">Result</string>
    <string name="Heading">Activity 2</string>

</resources>